<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:backgroundTintMode="@color/white"
    android:layout_marginHorizontal="40dp"
    tools:context=".authentikasi.LoginPage"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/deskripsi_logo"
            android:src="@drawable/logo_aplikasi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/judul_login"
            android:fontFamily="@font/extrabold"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/deskripsi_login"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:id="@+id/layout_username"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/error"
            app:errorTextColor="@color/error"
            android:hint="@string/hint_username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:id="@+id/email"
                android:fontFamily="@font/medium"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/error"
            app:errorTextColor="@color/error"
            android:hint="@string/hint_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:id="@+id/password"
                android:fontFamily="@font/medium"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="70dp"
        android:text="@string/button_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/bold"
        android:textSize="18sp"
        android:textStyle="bold"
        android:elevation="0dp"
        android:theme="@style/Theme.MaterialComponents"
        app:backgroundTint="#089404"
        app:cornerRadius="50dp"
        app:rippleColor="@color/primary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="30dp"
        android:text="@string/text_bottom"
        android:fontFamily="@font/medium"
        android:textColor="@color/black"
        android:textSize="14sp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>